// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleButton /> should render component with custom thumb color 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#4255EF80"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      [
        [
          {},
        ],
        {
          "backgroundColor": "#4444444D",
          "borderRadius": 16,
        },
      ],
    ]
  }
  testID="toggle_button"
  thumbColorProps={
    {
      "falseColor": "blue",
      "trueColor": "red",
    }
  }
  thumbTintColor="red"
  tintColor="#4444444D"
  value={true}
/>
`;

exports[`<ToggleButton /> should render component with custom track color 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="red"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      [
        [
          {},
        ],
        {
          "backgroundColor": "blue",
          "borderRadius": 16,
        },
      ],
    ]
  }
  testID="toggle_button"
  thumbTintColor="#4255EF"
  tintColor="blue"
  trackColorProps={
    {
      "falseColor": "blue",
      "trueColor": "red",
    }
  }
  value={true}
/>
`;

exports[`<ToggleButton /> should render toggle component 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#4255EF80"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      [
        [
          {},
        ],
        {
          "backgroundColor": "#4444444D",
          "borderRadius": 16,
        },
      ],
    ]
  }
  testID="toggle_button"
  thumbTintColor="#4255EF"
  tintColor="#4444444D"
  value={true}
/>
`;
